add User handling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,11 +49,12 @@
   "other": "other",
 
   "Email": "Email",
+  "FullName": "Full name",
   "Enter email": "Enter email",
   "emailError": "Invalid email",
   "Username": "Username",
   "Enter username": "Enter usernmae",
-  "usernameError": "Invalid username",
+  "usernameError": "Invalid username format. Use latin letters and symbols -, +, .",
   "Password": "password",
   "Enter password": "Enter password",
   "passwordError": "Use at least one lower- and uppercase letter, number and symbol. Min length 6",
@@ -63,6 +64,12 @@
   "Login": "Login",
   "Register": "Register",
   "Forgot password?": "Forgot password?",
+  "Restore password": "Restore password",
+  "Check your email": "Check your email",
+  "Save new password": "Save new password",
+  "Server error": "Server error",
+  "Logout": "Logout",
+  "Update info": "Update info",
 
   "Sort": "Sort",
   "By name": "By name",
