--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -49,11 +49,12 @@
   "other": "другие",
 
   "Email": "Email",
+  "FullName": "Имя",
   "Enter email": "Введите адрес электронной почты",
   "emailError": "Неверный адрес электронной почты",
-  "Username": "Имя пользователя",
-  "Enter username": "Введите имя пользователя",
-  "usernameError": "Неверное имя пользователя",
+  "Username": "Ник",
+  "Enter username": "Введите ник пользователя",
+  "usernameError": "Неверный формат ника. Используйте латинские буквы и символы -, +, .",
   "Password": "Пароль",
   "Enter password": "Введите пароль",
   "passwordError": "Используй для пароля большие и маленькие латинские буквы, цифры и символы. Минимальная длина 6",
@@ -63,6 +64,12 @@
   "Login": "Войти",
   "Register": "Зарегистрироваться",
   "Forgot password?": "Забыли пароль?",
+  "Restore password": "Восстановить пароль",
+  "Check your email": "Проверьте почту",
+  "Save new password": "Сохранить новый пароль",
+  "Server error": "Ошибка сервера",
+  "Logout": "Выход",
+  "Update info": "Обновить инфо",
 
   "Sort": "Сортировать",
   "By name": "По имени",
