settings and translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,18 +57,25 @@
   "usernameError": "Invalid username format. Use latin letters and symbols -, +, .",
   "Password": "password",
   "Enter password": "Enter password",
+  "New password": "New password",
+  "Enter new password": "Enter new password",
+  "Current password": "Current password",
+  "Enter current password": "Enter current password",
   "passwordError": "Use at least one lower- and uppercase letter, number and symbol. Min length 6",
   "Confirm": "Confirm",
   "Confirm password": "Confirm password",
   "confirmError": "Password and confirmation do not match",
   "Login": "Login",
   "Register": "Register",
+  "Settings": "Settings",
   "Forgot password?": "Forgot password?",
   "Restore password": "Restore password",
   "Check your email": "Check your email",
   "Save new password": "Save new password",
   "Server error": "Server error",
   "Logout": "Logout",
+  "Save": "Save",
+  "Exit": "Exit",
   "Update info": "Update info",
 
   "Sort": "Sort",
