--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -57,18 +57,25 @@
   "usernameError": "Неверный формат ника. Используйте латинские буквы и символы -, +, .",
   "Password": "Пароль",
   "Enter password": "Введите пароль",
+  "New password": "Новый пароль",
+  "Enter new password": "Введите новый пароль",
+  "Current password": "Текущий пароль",
+  "Enter current password": "Введите текущий пароль",
   "passwordError": "Используй для пароля большие и маленькие латинские буквы, цифры и символы. Минимальная длина 6",
   "Confirm": "Подтверджение",
   "Confirm password": "Подтвердите пароль",
   "confirmError": "Пароль и подтверджение не совпадают",
   "Login": "Войти",
   "Register": "Зарегистрироваться",
+  "Settings": "Настройки",
   "Forgot password?": "Забыли пароль?",
   "Restore password": "Восстановить пароль",
   "Check your email": "Проверьте почту",
   "Save new password": "Сохранить новый пароль",
   "Server error": "Ошибка сервера",
   "Logout": "Выход",
+  "Save": "Сохранить",
+  "Exit": "Выход",
   "Update info": "Обновить инфо",
 
   "Sort": "Сортировать",
