split auth and nonauth routes, add translation

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -77,6 +77,7 @@
   "Save": "Сохранить",
   "Exit": "Выход",
   "Update info": "Обновить инфо",
+  "User info updated": "Информация успешно обновлена",
 
   "Sort": "Сортировать",
   "By name": "По имени",
