--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -77,6 +77,7 @@
   "Save": "Save",
   "Exit": "Exit",
   "Update info": "Update info",
+  "User info updated": "User info updated",
 
   "Sort": "Sort",
   "By name": "By name",
