--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -65,6 +65,7 @@
   "Confirm": "Подтверджение",
   "Confirm password": "Подтвердите пароль",
   "confirmError": "Пароль и подтверджение не совпадают",
+  "currentPasswordError": "Введите текущий пароль",
   "Login": "Войти",
   "Register": "Зарегистрироваться",
   "Settings": "Настройки",
@@ -76,8 +77,12 @@
   "Logout": "Выход",
   "Save": "Сохранить",
   "Exit": "Выход",
+  "Back": "Назад",
   "Update info": "Обновить инфо",
   "User info updated": "Информация успешно обновлена",
+  "Update error": "Ошибка обновления",
+  "Avatar uploaded": "Аватар загружен",
+  "Avatar upload error": "Ошибка обновления аватара",
 
   "Sort": "Сортировать",
   "By name": "По имени",
@@ -98,6 +103,8 @@
   "Comments": "Комментарии",
   "photos": "Фото",
   "videos": "Видео",
+
+  "Cannot load movie": "Не получилось загрузить фильм",
 
   "Leave a comment!": "Оставьте комментарий!",
   "Send": "Отправить",
