update ResetPassword and ForgotPassword

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -83,6 +83,7 @@
   "Update error": "Update error",
   "Avatar uploaded": "Avatar uploaded",
   "Avatar upload error": "Avatar upload error",
+  "ServerErrorTry": "Server Error. Please try again",
 
   "Sort": "Sort",
   "By name": "By name",
