--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -83,6 +83,7 @@
   "Update error": "Ошибка обновления",
   "Avatar uploaded": "Аватар загружен",
   "Avatar upload error": "Ошибка обновления аватара",
+  "ServerErrorTry": "Ошибка сервера. Пожалуйста, попробуйте еще раз",
 
   "Sort": "Сортировать",
   "By name": "По имени",
