--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -104,6 +104,8 @@
   "Comments": "Комментарии",
   "photos": "Фото",
   "videos": "Видео",
+  "unknown": "неизвестно",
+  "AuthOnly": "Мы верим, что вы - человек, но на всякий случай - войдите в свой аккаунт или создайте новый",
 
   "Cannot load movie": "Не получилось загрузить фильм",
 
