--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -108,6 +108,7 @@
   "AuthOnly": "Sorry. We believe, that you're a human, but please login or create an account",
 
   "Cannot load movie": "Cannot load movie",
+  "Loading error": "Loading error",
 
   "Leave a comment!": "Leave a comment!",
   "Send": "Send",
