--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -108,6 +108,7 @@
   "AuthOnly": "Мы верим, что вы - человек, но на всякий случай - войдите в свой аккаунт или создайте новый",
 
   "Cannot load movie": "Не получилось загрузить фильм",
+  "Loading error": "Ошибка загрузки",
 
   "Leave a comment!": "Оставьте комментарий!",
   "Send": "Отправить",
